--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <nav id="nav">
       <div class="navtop">
          <div class="navitem khilar">
-            shoemart
+            KHILAR
          </div>
 
          <div class="menudiv">
