--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
       integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="stylesheet" href="cart.css">
    <link rel="stylesheet" href="style.css">
+
    <title>KHILAR</title>
 </head>
 
@@ -34,11 +36,14 @@
             <input type="text" placeholder="search..." class="searchinput">
             <i class="fa-solid fa-magnifying-glass "></i>
          </div>
+
+         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
       </div>
    </nav>
 
    <div class="nav2">
-      <marquee behavior="" direction="">Serve Up Your undeniable style in the iconic versatility of a hoops legend.</marquee>
+      <marquee behavior="" direction="">Serve Up Your undeniable style in the iconic versatility of a hoops legend.
+      </marquee>
    </div>
 
    <div class="slider">
@@ -62,9 +67,7 @@
             </a>
          </div>
          <div class="slideritem">
-            <img
-               src="./image/blazeroriginal.png"
-               alt="" class="sliderimg">
+            <img src="./image/blazeroriginal.png" alt="" class="sliderimg">
             <div class="slidebg"></div>
             <h1 class="slidertitle">BLAZER <br>NEW <br> SEASON</h1>
             <h2 class="sliderprice">12,999</h2>
@@ -73,7 +76,8 @@
             </a>
          </div>
          <div class="slideritem">
-            <img src="https://i.pinimg.com/736x/68/76/ed/6876ed00bd69a180895b16ae9775571f--nike-dunks-whats-the.jpg" alt="" class="sliderimg">
+            <img src="https://i.pinimg.com/736x/68/76/ed/6876ed00bd69a180895b16ae9775571f--nike-dunks-whats-the.jpg"
+               alt="" class="sliderimg">
             <div class="slidebg"></div>
             <h1 class="slidertitle">Dunk <br>NEW <br> SEASON</h1>
             <h2 class="sliderprice">13,999</h2>
@@ -120,7 +124,7 @@
       <img src="./image/jordan.png" alt="" class="productimg">
       <div class="productdetails">
          <h1 class="producttitle">JORDAN</h1>
-         <h2 class="productprice">15,999</h2>
+         <h2 class="productprice price">15,999</h2>
          <p class="productdesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui velit nulla provident
             placeat commodi fugiat odio accusamus error minima suscipit tempora nisi quo doloremque repellat modi
             corporis non, obcaecati illum!</p>
@@ -157,6 +161,64 @@
          <button class="payButton">Checkout!</button>
          <span class="close">X</span>
       </div>
+   </div>
+
+   <div class="container">
+      <main>
+         <div class="cards">
+            <div class="card" id="apple1">
+               <img src="./image/jordan.png" alt="Jordan" width="100px">
+               <h2>jordan</h2>
+               <p><mark><span class="price">8</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="apple2">
+               <img src="./image/air.png" alt="apple" width="100px">
+               <h2>Air force</h2>
+               <p><mark><span class="price">9</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="banana1">
+               <img src="./image/blazer.png" alt="banan" width="100px">
+               <h2>Blazer</h2>
+               <p><mark><span class="price">10</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="banana2">
+               <img src="https://i.pinimg.com/736x/68/76/ed/6876ed00bd69a180895b16ae9775571f--nike-dunks-whats-the.jpg"
+                  alt="banan" width="150px">
+               <h2>Dunk</h2>
+               <p><mark><span class="price">11</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="banana3">
+               <img src="./image/hippie.png" alt="banan" width="100px">
+               <h2>Hippie</h2>
+               <p><mark><span class="price">12</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="cherry1">
+               <img src="./image/hippie2.png" alt="cherry" width="100px">
+               <h2>Sprax</h2>
+               <p><mark><span class="price">13</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="cherry2">
+               <img src="./image/crater2.png" alt="cherry" width="100px">
+               <h2>Addidas</h2>
+               <p><mark><span class="price">8</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+            <div class="card" id="cherry3">
+               <img src="https://m.media-amazon.com/images/I/81UEKD1LteL._AC_UY1000_.jpg" alt="cherry" width="150px">
+               <h2>Reebok</h2>
+               <p><mark><span class="price">8</span>$</mark></p>
+               <button>Add to cart</button>
+            </div>
+         </div>
+
+
+      </main>
    </div>
 
    <div class="gallery">
@@ -200,6 +262,16 @@
       </div>
    </div>
 
+   <div class="cartitems">
+      <aside>
+         <aside>
+            <h2>Product Basket</h2>
+            <ul id="cart"></ul>
+            <div id="total">Total Amount: $0 </div><br>
+            <button class="buy">Buy Now</button>
+         </aside>
+      </aside>
+   </div>
    <footer>
       <div class="footerLeft">
          <div class="footerMenu">
@@ -257,6 +329,7 @@
    </footer>
 
    <script src="app.js"></script>
+   <script src="shopping.js"></script>
 </body>
 
 </html>
