--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <i class="fa-solid fa-magnifying-glass "></i>
          </div>
 
-         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+         <a href="#cart"><i class="fa-solid fa-cart-shopping"></i></a>
       </div>
    </nav>
 
@@ -262,7 +262,7 @@
       </div>
    </div>
 
-   <div class="cartitems">
+   <div class="cartitems" id="cart">
       <aside>
          <aside>
             <h2>Product Basket</h2>
