--- a/index.html
+++ b/index.html
@@ -262,16 +262,15 @@
       </div>
    </div>
 
-   <div class="cartitems" id="cart">
+   <aside>
       <aside>
-         <aside>
-            <h2>Product Basket</h2>
-            <ul id="cart"></ul>
-            <div id="total">Total Amount: $0 </div><br>
-            <button class="buy">Buy Now</button>
-         </aside>
+         <h2>Product Basket</h2>
+         <ul id="cart"></ul>
+         <div id="total">Total Amount: $0</div>
+         <button class="buy">Buy Now</button>
       </aside>
-   </div>
+   </aside>
+
    <footer>
       <div class="footerLeft">
          <div class="footerMenu">
@@ -329,7 +328,7 @@
    </footer>
 
    <script src="app.js"></script>
-   <script src="shopping.js"></script>
+   <script src="shoping.js"></script>
 </body>
 
 </html>
